<resources>
    <string name="app_name">App List Teman</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">List Teman</string>
    <string name="nav_header_subtitle">Aplikasi Daftar Teman-Teman</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_kontak">Kontak</string>
    <string name="menu_daftar_teman">Daftar Teman</string>
    <string name="halaman1" />
    <string name="halaman2" />
    <string name="halaman3" />
    <string name="profil">Profil</string>
    <string name="photo_saya">Photo saya</string>
    <string name="txt_view_nim">NIM</string>
    <string name="txt_view__10116563">10116563</string>
    <string name="txt_view_nama">Nama</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
