<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_menu_profil"
            android:title="@string/menu_profil" />
        <item
            android:id="@+id/nav_kontak"
            android:icon="@drawable/ic_menu_kontak"
            android:title="@string/menu_kontak" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_teman"
            android:title="@string/menu_daftar_teman" />
    </group>


</menu>
